--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,130 @@
+
+img[src=""],img:not([src]){opacity:0;}  
+
 body{padding:0;margin:0;}
+
 .img_bg{width:100vw;height:auto;position:absolute;z-index:-1;}
 
-#zoom_area {
-    width:100%;
-    height:90%;
+#pic_area {
+    width:100vw;
+    height:130vw;
     overflow:hidden;
 }
 
 #pic {
-    width:100%;
-    height:100%;
+    margin-top: 9vw;
+    margin-left: 7vw;
+    width:86vw;
+    height:130vw;
 }
-/* #view_wait{display: none} */
-#view_play{display: block}
-/* #view_result{display: none} */
 
+.sec {
+    width:100vw;
+    height: 10vh;
+}
+
+#btn_tujian {
+    width: 36vw;
+    height: auto;
+    margin-top: 2vh; 
+    margin-left: 32vw;
+}
+
+#desc {
+    width:86vw;
+    height: 5vw;
+    margin-top: 0vh;
+    margin-left: 7vw;
+    text-align: center;
+    color: white;
+}
+
+#view_tujian {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    position: fixed;
+    display: block;
+    background-color:#061325; 
+    opacity:0.8;
+}
+
+#dialog {
+    width: 100vw;
+    height:135vw;
+    margin-left: 0vw;
+    margin-top: 6vh; 
+    background-image: url(../asset/list_bg.png);
+    background-position: center center;
+	background-size: 100vw auto;
+	/* background-attachment: fixed; */
+    background-repeat: no-repeat;
+    padding-top: 5vh;
+}
+
+#list {
+    width: 100vw;
+    height:135vw;
+    padding-top: 10vh;
+    padding-left: 10vw;
+}
+
+.tj_item {
+    width: 76vw;
+    height:22vw;
+    margin-top: 1vw;
+    margin-left:2vw;
+    margin-right:2vw;
+    margin-bottom: 0;
+    /* background-color: white; */
+    background-image: url(../asset/item_bg_1.png);
+    background-position: center center;
+	background-size: 76vw 15vw;
+	/* background-attachment: fixed; */
+    background-repeat: no-repeat;
+}
+
+.icon_wrap {
+    width:13vw;
+    height:18vw;
+    margin-top: 0vw;
+    float:left;
+}
+
+.tj_icon {
+    width: 17vw;
+    height: 17vw;
+    margin: 0;
+    padding: 0;
+}
+
+.icon_first {
+    margin-left: 3vw; 
+}
+
+.btn_wrap {
+    width:20vw;
+    height:17vw;
+    float:right;
+    margin: 0;
+    padding: 0;
+}
+
+.brn_charge {
+    width: 16vw;
+    height: auto;
+    margin-left: 1vw;
+    margin-top: 8vw;
+}
+
+#readme {
+    width:76vw;
+    height: 25vw;
+    margin-top: 6vw;
+    margin-left: 2vw;
+    text-align: left;
+    color: white;
+    line-height:8vw;
+}
