--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,20 @@
 
-img[src=""],img:not([src]){opacity:0;}  
+/* img[src=""],img:not([src]){opacity:0;}   */
 
 body{padding:0;margin:0;}
+.container {
+    width: 100vw;
+    height: 100vh;
+    padding:0;margin:0;
+    overflow: scroll;
+}
 
-.img_bg{width:100vw;height:auto;position:absolute;z-index:-1;}
+.img_bg{
+    width:100vw;
+    height:100vh;
+    position:absolute;
+    z-index:-1;
+}
 
 #pic_area {
     width:100vw;
@@ -20,20 +31,20 @@ body{padding:0;margin:0;}
 
 .sec {
     width:100vw;
-    height: 10vh;
+    height: 10vw;
 }
 
 #btn_tujian {
     width: 36vw;
     height: auto;
-    margin-top: 2vh; 
+    margin-top: 2vw; 
     margin-left: 32vw;
 }
 
 #desc {
     width:86vw;
     height: 5vw;
-    margin-top: 0vh;
+    margin-top: 4vw;
     margin-left: 7vw;
     text-align: center;
     color: white;
@@ -42,11 +53,18 @@ body{padding:0;margin:0;}
 #view_tujian {
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     padding: 0;
     position: fixed;
-    display: block;
+    display: none;
+}
+
+.opacity_cover{
+    width:100vw;
+    height:100vh;
+    position:absolute;
+    z-index:-1;
     background-color:#061325; 
     opacity:0.8;
 }
@@ -55,19 +73,19 @@ body{padding:0;margin:0;}
     width: 100vw;
     height:135vw;
     margin-left: 0vw;
-    margin-top: 6vh; 
+    margin-top: 6vw; 
     background-image: url(../asset/list_bg.png);
     background-position: center center;
 	background-size: 100vw auto;
 	/* background-attachment: fixed; */
     background-repeat: no-repeat;
-    padding-top: 5vh;
+    padding-top: 5vw;
 }
 
 #list {
     width: 100vw;
     height:135vw;
-    padding-top: 10vh;
+    padding-top: 10vw;
     padding-left: 10vw;
 }
 
