--- a/css/index.css
+++ b/css/index.css
@@ -18,11 +18,12 @@ body{padding:0;margin:0;}
 
 #pic_area {
     width:100vw;
-    height:auto;
-
+    height:156;
+    margin:0;
+    padding-top: 7vw; 
     overflow:hidden;
     display: table-cell; 
-    vertical-align: middle;
+    /* vertical-align: middle; */
     text-align: center;
 } 
 
