--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ body{padding:0;margin:0;}
 
 #pic_area {
     width:100vw;
-    height:156;
+    height:156vw;
     margin-top: 7vw; 
     overflow:hidden;
     display: table-cell; 
