--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,6 @@ body{padding:0;margin:0;}
     display: table-cell; 
     /* vertical-align: middle; */
     text-align: center;
-    background-color: blue;
 } 
 
 #pic {
@@ -38,6 +37,7 @@ body{padding:0;margin:0;}
 .sec {
     width:100vw;
     height: 10vw;
+    margin:0;
 }
 
 #btn_tujian {
