--- a/css/index.css
+++ b/css/index.css
@@ -61,6 +61,10 @@ body{padding:0;margin:0;}
 }
 
 .title {
+    width:100vw;
+    height: 25vw;
+    margin-top: 6vw;
+    margin-left: 2vw;
     text-align: center;
     color: #9cefff;
 }
@@ -182,3 +186,4 @@ body{padding:0;margin:0;}
     color: white;
     line-height:8vw;
 }
+
