--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,8 @@ body{padding:0;margin:0;}
 
 #pic_area {
     width:100vw;
-    height:156;
+    height:auto;
+    min-height: 156vw;
     margin:0;
     padding-top: 7vw; 
     overflow:hidden;
@@ -101,7 +102,7 @@ body{padding:0;margin:0;}
 #wait_count_down {
 	-webkit-flex:1;
 	display: flex;
-	height: 100vh;
+	height: 20vh;
 	width: 100vw;
 	justify-content:center;
 	position: absolute;
