--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ body{padding:0;margin:0;}
     width: 100vw;
     height: 100vh;
     padding:0;margin:0;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .img_bg{
