--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,16 @@
 
 /* img[src=""],img:not([src]){opacity:0;}   */
 
-body{padding:0;margin:0;}
+body{
+    padding:0;
+    margin:0;
+    overflow:hidden;
+}
 .container {
     width: 100vw;
     height: 100vh;
     padding:0;margin:0;
-    overflow: auto;
+    overflow:hidden;
 }
 
 .img_bg{
