somthing done for taihe2

--- a/css/index.css
+++ b/css/index.css
@@ -79,7 +79,7 @@ body{
     margin-top: 6vw;
     margin-left: 2vw;
     text-align: center;
-    color: #9cefff;
+    color:white;
 }
 
 #wait_desc {
