--- a/css/index.css
+++ b/css/index.css
@@ -79,15 +79,17 @@ body{
     margin-top: 6vw;
     margin-left: 2vw;
     text-align: center;
+    font-size: 30vw;
     color:white;
 }
 
 #wait_desc {
     width:100vw;
-    height: 15vw;
+    height: 35vh;
     margin-top: 6vw;
     margin-left: 2vw;
     text-align: center;
+    font-size: 24vw;
     color: #9cefff;
 }
 
