--- a/css/index.css
+++ b/css/index.css
@@ -75,7 +75,7 @@ body{
 
 .title {
     width:100vw;
-    height: 15vw;
+    height: 10vh;
     margin-top: 6vw;
     margin-left: 2vw;
     text-align: center;
@@ -89,7 +89,7 @@ body{
     margin-top: 6vw;
     margin-left: 2vw;
     text-align: center;
-    font-size: 6vw;
+    font-size: 7vw;
     color: #9cefff;
 }
 
