--- a/css/index.css
+++ b/css/index.css
@@ -76,7 +76,7 @@ body{
 .title {
     width:100vw;
     height: 20vh;
-    margin-top: 6vw;
+    margin-top: 2vh;
     margin-left: 2vw;
     text-align: center;
     font-size: 8vw;
@@ -86,7 +86,7 @@ body{
 #wait_desc {
     width:100vw;
     height: 23vh;
-    margin-top: 6vw;
+    margin-top: 4vh;
     margin-left: 2vw;
     text-align: center;
     font-size: 7vw;
