--- a/css/index.css
+++ b/css/index.css
@@ -170,6 +170,12 @@ body{
     padding-top: 5vw;
 }
 
+.close_btn {
+    width: 10vw;
+    height:auto;
+    float: left;
+}
+
 #list {
     width: 100vw;
     height:135vw;
