--- a/css/index.css
+++ b/css/index.css
@@ -179,8 +179,8 @@ body{
     height:auto;
     float: right;
 
-    margin-top: 4vw;
-    margin-right: 6vw;
+    margin-top: 5vw;
+    margin-right: 8=10vw;
 }
 
 #list {
