--- a/css/index.css
+++ b/css/index.css
@@ -4,13 +4,13 @@
 body{
     padding:0;
     margin:0;
-    overflow:hidden;
+    /* overflow:hidden; */
 }
 .container {
     width: 100vw;
     height: 100vh;
     padding:0;margin:0;
-    overflow:hidden;
+    /* overflow:hidden; */
 }
 
 .img_bg{
