--- a/css/index.css
+++ b/css/index.css
@@ -134,8 +134,9 @@ body{
 }
 
 #result_info_img {
-    width: 80vw;
+    width: 90vw;
     height: auto;
+    margin-top: 10vh;
     margin-left:15vw; 
 }
 
