--- a/css/index.css
+++ b/css/index.css
@@ -80,7 +80,6 @@ body{
 
 #view_result {
     display: none;
-    padding-top: 6vh; 
 }
 
 .title {
@@ -137,6 +136,7 @@ body{
 #result_info_img {
     width: 90vw;
     height: auto;
+    padding-top:5vw;
     margin-left:5vw; 
 }
 
