--- a/css/index.css
+++ b/css/index.css
@@ -67,7 +67,7 @@ body{
     margin-top: 4vw;
     margin-left: 7vw;
     text-align: center;
-    color: white;
+    color: #4e7878;
 }
 
 #view_play {
