--- a/css/index.css
+++ b/css/index.css
@@ -66,6 +66,7 @@ body{
     height: 5vw;
     margin-top: 4vw;
     margin-left: 7vw;
+    font-size: 10vw;
     text-align: center;
     color: #4e7878;
 }
